fix: Collectors.toList() To toList()